human_written_tests/WebAssembly/processed_control_flow_validation/test_return_3.wast
(assert_invalid
  (module
    (func $type-value-empty-vs-num-in-loop (result i32)
      (i32.const 0)
      (loop (return))
    )
  )
  "type mismatch"
)